# Cpp-Game-Animation-Programming-Second-Edition

./: .gitignore
chapter01/02_opengl_window/: CMakeLists.txt
chapter01/03_vulkan_window/: CMakeLists.txt
chapter01/04_event_handling/: CMakeLists.txt
chapter01/05_window_with_input/: CMakeLists.txt
chapter01/06_assignment/window/: Window.cpp  Window.h
chapter02/my_opengl_renderer/: CMakeLists.txt  Main.cpp
chapter02/my_opengl_renderer/include/glad/: glad.h
chapter02/my_opengl_renderer/model/: Model.cpp  Model.h
chapter02/my_opengl_renderer/opengl_renderer/: Framebuffer.cpp  Framebuffer.h  Model.cpp  Model.h  OGLRenderData.cpp  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
chapter02/my_opengl_renderer/shader/: basic.frag  basic.vert
chapter02/my_opengl_renderer/src/: glad.c
chapter02/my_opengl_renderer/window/: Window.cpp  Window.h
